--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -12,6 +12,7 @@
         <th>Category name</th>
         <th>Created Time</th>
         <th>Product count</th>
+        <th>Template</th>
         <th colspan="4">Actions</th>
       </tr>
     </thead>
@@ -21,6 +22,7 @@
           <td><%= link_to category.name, category_path(category) %></td>
           <td><%= category.created_at.strftime("%d-%b-%-y") %></td>
           <td><%= category.products.count %></td>
+          <td><%= category.category_template.template_name if category.category_template %></td>
           <td><%= link_to "View products", products_path(category_id: category.id) %></td>
           <% if current_user.admin? %>
             <td><%= link_to("Edit", edit_category_path(category)) %></td>
