add timings for all week days

--- a/app/views/category_templates/_form.html.erb
+++ b/app/views/category_templates/_form.html.erb
@@ -136,7 +136,14 @@
     </tbody>
   </table>
 
-   <div>
-    <%= f.submit "Submit" %>
+   <div class="row">
+    <div class="col-2">
+      <%= f.submit "Submit" %>
+    </div>
+    <% if @resource.persisted? %>
+      <div class="col-2">
+        <%= link_to 'Cancel', category_template_path(@resource), class: 'btn btn-primary' %>
+      </div>
+    <% end %>
    </div>
 <% end %>
